--- a/login.html
+++ b/login.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href="login.css">
 </head>
 <body>
-    
+      <div class="body">
+    <div class="logo">
+        <a href="index.html"><img src="Images/payora_transp.png" id="payoraa_logo"></a>
+    </div>
+<div class="header">
+    <div class="headerele recharge"> <a style="text-decoration: none; color: white;" href="recharge.html">Recharge</a></div>
+<div class="headerele travel"> <a style="text-decoration: none; color: white;" href="travel.html">Travel</a></div>
+<div class="headerele credit"><a style="text-decoration: none; color: white;" href="credit.html">Credit</a></div>
+<div class="headerele login"><a style="text-decoration: none; color: white;" href="login.html">Login</a></div>
+</div></div>
 </body>
 </html>
