--- a/index.html
+++ b/index.html
@@ -19,9 +19,14 @@
 <div class="headerele travel"> <a style="text-decoration: none; color: white;" href="travel.html">Travel</a></div>
 <div class="headerele credit"><a style="text-decoration: none; color: white;" href="credit.html">Credit</a></div>
 <div class="headerele login"><a style="text-decoration: none; color: white;" href="login.html">Login</a></div>
-</div>
+</div></div>
+<div class="conainer">
 <div class="hero"></div>
-<div class="useful"></div>
+<div class="useful">
+    <div class="boxs cc"></div>
+    <div class="boxs rc"></div>
+    <div class="boxs trv"></div>
+</div>
 <div class="footer"></div>
 </div>
 </body>
