--- a/recharge.html
+++ b/recharge.html
@@ -4,18 +4,46 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recharge</title>
-    <link rel="stylesheet" href="recharge.css">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Google+Sans+Code:ital,wght@0,300..800;1,300..800&family=Monoton&family=Notable&family=Poller+One&family=Slabo+13px&family=Stack+Sans+Text:wght@200..700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="fonts.css">
+
 </head>
 <body>
-    <div class="body">
+    <div class="mother">
+<div class="body">
     <div class="logo">
-        <a href="index.html"><img src="Images/payora_transp.png" id="payoraa_logo"></a>
+        <!-- <img src="Images/payora_transp.png" id="payoraa_logo"> -->
+        <a href="index.html" class="notable-regular" style=" text: size 30px; text-decoration: none; padding:20px; color: white;">Payora</a>
     </div>
-<div class="header">
+<div class="header stack-sans-text google-sans-code">
     <div class="headerele recharge"> <a style="text-decoration: none; color: white;" href="recharge.html">Recharge</a></div>
-<div class="headerele travel"> <a style="text-decoration: none; color: white;" href="travel.html">Travel</a></div>
+<div class="headerele travel"><a style="text-decoration: none; color: white;" href="travel.html">Travel</a></div>
 <div class="headerele credit"><a style="text-decoration: none; color: white;" href="credit.html">Credit</a></div>
 <div class="headerele login"><a style="text-decoration: none; color: white;" href="login.html">Login</a></div>
 </div></div>
+<div class="conainer">
+<div class="hero">
+    <div class="herotabs ha1">
+       <p class="notable-regular" id="text1"> Change the way You </p>
+       <p class="monoton-regular" id="text2">PAY</p>
+        <!-- <img id="changetheway" src="Images/Change the way.png"  alt=""> -->
+    </div>
+    <!-- <div class="herotabs ha2"></div>
+    <div class="herotabs ha3"></div> -->
+</div>
+<div class="useful">
+    <div class="boxs cc">
+        <!-- <img src="Images/27221716933469500.avif" alt=""> -->
+    </div>
+    <div class="boxs rc"></div> 
+    <div class="boxs trv"></div>
+</div>
+
+<div class="footer"></div>
+</div>
+</div>
 </body>
 </html>
