--- a/index.html
+++ b/index.html
@@ -1,64 +1,114 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Payora</title>
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Google+Sans+Code:ital,wght@0,300..800;1,300..800&family=Monoton&family=Notable&family=Poller+One&family=Slabo+13px&family=Stack+Sans+Text:wght@200..700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="index.css">
-    <link rel="stylesheet" href="fonts.css">
-
-</head>
-<body>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Google+Sans+Code:ital,wght@0,300..800;1,300..800&family=Monoton&family=Notable&family=Poller+One&family=Slabo+13px&family=Stack+Sans+Text:wght@200..700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="fonts.css" />
+  </head>
+  <body>
     <div class="mother">
-<div class="body">
-    <div class="logo">
-        <!-- <img src="Images/payora_transp.png" id="payoraa_logo"> -->
-        <a href="index.html" class="notable-regular" style=" text: size 30px; text-decoration: none;padding:20px;color: white;">Payora</a>
-    </div>
-<div class="header stack-sans-text google-sans-code">
-    <div class="headerele recharge"> <a style="text-decoration: none; color: white;" href="recharge.html">Recharge</a></div>
-<div class="headerele travel"><a style="text-decoration: none; color: white;" href="travel.html">Travel</a></div>
-<div class="headerele credit"><a style="text-decoration: none; color: white;" href="credit.html">Credit</a></div>
-<div class="headerele login"><a style="text-decoration: none; color: white;" href="login.html">Login</a></div>
-</div></div>
-<div class="conainer">
-<div class="hero">
-    <div class="herotabs ha1">
-       <p class="notable-regular" id="text1"> Change the way You </p>
-       <p class="monoton-regular" id="text2">PAY</p>
-        <!-- <img id="changetheway" src="Images/Change the way.png"  alt=""> -->
-    </div>
-    <!-- <div class="herotabs ha2"></div>
+      <div class="body">
+        <div class="header stack-sans-text google-sans-code">
+          <div class="logo">
+            <!-- <img src="Images/payora_transp.png" id="payoraa_logo"> -->
+            <a
+              href="index.html"
+              class="notable-regular"
+              style="
+                text: size 30px;
+                text-decoration: none;
+                padding: 20px;
+                color: white;
+              "
+              >Payora</a
+            >
+          </div>
+          <div class="right">
+            <div class="headerele recharge">
+              <a
+                style="text-decoration: none; color: white"
+                href="recharge.html"
+                >Recharge</a
+              >
+            </div>
+            <div class="headerele travel">
+              <a style="text-decoration: none; color: white" href="travel.html"
+                >Travel</a
+              >
+            </div>
+            <div class="headerele credit">
+              <a style="text-decoration: none; color: white" href="credit.html"
+                >Credit Card</a
+              >
+            </div>
+          </div>
+          <div class="headerele login">
+            <a style="text-decoration: none; color: white" href="login.html"
+              >Login</a
+            >
+          </div>
+        </div>
+      </div>
+      <div class="conainer">
+        <div class="hero">
+          <div class="herotabs ha1">
+            <p class="notable-regular" id="text1">Change the way You</p>
+            <p class="monoton-regular" id="text2">PAY</p>
+            <!-- <img id="changetheway" src="Images/Change the way.png"  alt=""> -->
+          </div>
+          <!-- <div class="herotabs ha2"></div>
     <div class="herotabs ha3"></div> -->
-</div>
-<div class="useful google-sans-code">
-    <div class="boxs cc">
-        <p class="textcc1 notable-regular">Credit Card</p>
-        <br>
-        <p class="textcc1 " style="font-size: 30px;">Get Your's Now</p>
-        <img width="500px" style="padding: 50px;" src="Images/creditcardimage.png" alt="">
-    </div>
-    <div class="boxs rc">
-        <p class="textrc1 notable-regular">Recharge Now</p>
-        <br>
-        <p class="textrc1" style="font-size: 30px;">Connect with your Loved Ones</p>
-        <img width="500px" style="padding: 50px;" src="Images/rechargenow.png" alt="">
-    </div> 
-    <div class="boxs trv">
-        <p class="texttrv1 notable-regular">Travel</p>
-        <br>
-        <p class="texttrv1" style="font-size: 30px;">Live your Dreams</p>
-         <img width="500px" style="padding: 50px;" src="Images/travel.png" alt="">
-    </div>
-</div>
+        </div>
+        <div class="useful google-sans-code">
+          <div class="boxs cc">
+            <p class="textcc1 notable-regular">Credit Card</p>
+            <br />
+            <p class="textcc1" style="font-size: 30px">Get Your's Now</p>
+            <img
+              width="500px"
+              style="padding: 50px"
+              src="Images/creditcardimage.png"
+              alt=""
+            />
+          </div>
+          <div class="boxs rc">
+            <p class="textrc1 notable-regular">Recharge Now</p>
+            <br />
+            <p class="textrc1" style="font-size: 30px">
+              Connect with your Loved Ones
+            </p>
+            <img
+              width="500px"
+              style="padding: 50px"
+              src="Images/rechargenow.png"
+              alt=""
+            />
+          </div>
+          <div class="boxs trv">
+            <p class="texttrv1 notable-regular">Travel</p>
+            <br />
+            <p class="texttrv1" style="font-size: 30px">Live your Dreams</p>
+            <img
+              width="500px"
+              style="padding: 50px"
+              src="Images/travel.png"
+              alt=""
+            />
+          </div>
+        </div>
 
-<div class="footer">
-    <p class="footertext">Capstone Project Built by Akash Pansari</p>
-</div>
-</div>
-</div>
-</body>
+        <div class="footer">
+          <p class="footertext">Capstone Project Built by Akash Pansari</p>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
