--- a/index.html
+++ b/index.html
@@ -81,11 +81,12 @@
           <div class="boxs cc">
             <p class="textcc1 frijole-regular">Credit Card</p>
             <br />
-            <p class="textcc1 google-sans-flex" style="font-size: 30px">Get Your's Now</p>
+            <p class="textcc1 google-sans-flex" style="font-size: 30px">Get a FD-Backed RBI Approved Credit Card</p>
             <img
               width="500px"
               style="padding: 50px"
-              src="Images/creditcardimage.png"
+              
+              src="Images/cc_3.png"
               alt=""
             />
           </div>
@@ -93,7 +94,7 @@
             <p class="textrc1 frijole-regular">Recharge</p>
             <br />
             <p class="textrc1 google-sans-flex" style="font-size: 30px">
-              Connect with your Loved Ones
+              Enjoy the World's Fastest    Internet in India
             </p>
             <img
               width="500px"
@@ -105,7 +106,7 @@
           <div class="boxs trv">
             <p class="texttrv1 frijole-regular">Travel</p>
             <br />
-            <p class="texttrv1 google-sans-flex" style="font-size: 30px">Live your Dreams</p>
+            <p class="texttrv1 google-sans-flex" style="font-size: 30px">Your Fav Destinations, now within Reach</p>
             <img
               width="500px"
               style="padding: 50px"
@@ -117,6 +118,8 @@
 
         <div class="footer">
           <p class="footertext">© 2025 Capstone Project. Built with passion and purpose.</p>
+           <p class="footertext">Made for the next generation of payments — © Payora.</p>
+            <p class="footertext">Built with ❤️ in India.</p>
         </div>
       </div>
     </div>
