--- a/pay.html
+++ b/pay.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="pay.css">
     <link rel="stylesheet" href="fonts.css">
     <link rel="stylesheet" href="headerbar.css">
+    <link rel="stylesheet" href="footer.css">
 </head>
 <body>
     <div class="body">
@@ -71,23 +72,28 @@
             <div class="paybody leftsidepay ">
               <h1 class="leftsidehtext poppins-bold">Send Money</h1>
               <h1 class="leftsidehtext poppins-bold"> to UPI ID</h1>
-              <p class="leftsideptext urbanist">Send money to UPI ID from our website or mobile app, in just a few clicks. Join over 1000 people who choose Payora for fast and secure money transfers.
+              <p class="leftsideptext urbanist">Send money to UPI ID from our website, in just a few clicks. Join over 1M+ people who choose Payora for fast and secure money transfers.
 </p>
             </div>
           <div class="paybody rightsidepay google-sans-flex">
             <h6 >🔒 Secured Payments</h6>
             <form action="post" class="payment-form ">
               <label class="form-content" style="font-size: 25px;" style="" for="upiid"> Enter UPI ID</label>
-              <input class="form-content" style="height: 70px;border: 1px solid #ccc3d0; border-radius: 15px; text-align: center; font-size: 25px;" type="text" id="upiid" name="upiid" placeholder="  VijayMallya@upi">
+              <input class="form-content" style="height: 70px;border: 1px solid #ccc3d0; border-radius: 15px; text-align: center; font-size: 25px;" type="text" id="upiid" name="upiid" placeholder="  username@upi">
               <label class="form-content" style="font-size: 25px;" for="amt"> Amount</label>
               <input class="form-content" style="height: 70px; border: 1px solid #ccc3d0; border-radius: 15px; text-align: center; font-size: 25px;" type="number" id="amt" name="amt" placeholder="  Amount">
                <label class="form-content" style="font-size: 25px;" for="remarks"> Remarks</label>
               <input class="form-content" style="height: 70px;border: 1px solid #ccc3d0; border-radius: 15px; text-align: center; font-size: 25px;" type="text" id="remarks" name="remarks" placeholder="  Paying For">
-              <button class="form-content" style="font-size: 25px;border: 1px solid #6f636d;  border-radius: 15px; text-align: center; height: 70px; background-color: #392f41; color: #ebe7df;" type="submit">Pay Securely</button>
+              <button class="form-content main-button" style="font-size: 25px;border: 1px solid #6f636d;  border-radius: 15px; text-align: center; height: 70px; background-color: #392f41; color: #ebe7df;" type="submit">Pay Securely</button>
             </form>
             <h5> Secured by Payora, Powered by NPCI</h5>
           </div>
           </div>
+          <div class="footer">
+          <p class="footertext">© 2025 Capstone Project. Built with passion and purpose.</p>
+           <p class="footertext">Made for the next generation of payments — © Payora.</p>
+            <p class="footertext">Built with ❤️ in India.</p>
+        </div>
       </div>
 </body>
 </html>
