--- a/travel.html
+++ b/travel.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="travel.css">
     <link rel="stylesheet" href="fonts.css">
     <link rel="stylesheet" href="headerbar.css">
+    <link rel="stylesheet" href="footer.css">
 </head>
 <body>
   <div class="body">
@@ -60,8 +61,8 @@
         <div class="mainsec">
           <div class="paydiv">
             <div class="paybody leftsidepay ">
-              <h1 class="leftsidehtext poppins-bold">Travel More</h1>
-              <h1 class="leftsidehtext poppins-bold">Where Do You Want to Go Next?</h1>
+              <h1 class="leftsidehtext poppins-bold">Travel Freely</h1>
+              <h1 class="leftsidehtext poppins-bold">Wherever you're gonna Go Next?</h1>
               <p class="leftsideptext urbanist">Everything You Need, All in One Place</p>
                 <ul style="list-style-type: none;">
                   <li class="leftsideptext urbanist">⚡ Instant Bookings</li>
@@ -101,11 +102,16 @@
                 <option value="SR. CITIZEN">SR. CITIZEN</option>
                 <option value="PHYSICALLY DISABLED">PHYSICALLY DISABLED</option>
               </select>
-              <button class="form-content" style="font-size: 25px;border: 1px solid #6f636d;  border-radius: 15px; text-align: center; height: 70px; background-color: #392f41; color: #ebe7df;" type="submit">Search and Book Train</button>
+              <button class="form-content main-button" style="font-size: 25px;border: 1px solid #6f636d;  border-radius: 15px; text-align: center; height: 70px; background-color: #392f41; color: #ebe7df;" type="submit">Search and Book Train</button>
             </form>
             <h5> Secured by Payora, Powered by IRCTC</h5>
           </div>
           </div>
+        </div>
+        <div class="footer">
+          <p class="footertext">© 2025 Capstone Project. Built with passion and purpose.</p>
+           <p class="footertext">Made for the next generation of payments — © Payora.</p>
+            <p class="footertext">Built with ❤️ in India.</p>
         </div>
         </div>
 </body>
