--- a/credit.html
+++ b/credit.html
@@ -1,21 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400..800&family=Eater&family=Freckle+Face&family=Frijole&family=Google+Sans+Flex:opsz,wght@6..144,1..1000&family=Hanalei&family=Outfit:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Rubik+Maze&family=Rubik+Puddles&family=Space+Grotesk:wght@300..700&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Payments</title>
-    <link rel="stylesheet" href="pay.css">
+    <link rel="stylesheet" href="credit.css">
     <link rel="stylesheet" href="fonts.css">
     <link rel="stylesheet" href="headerbar.css">
+    <link rel="stylesheet" href="footer.css">
 </head>
 <body>
     <div class="body">
-        <div class="header stack-sans-text google-sans-code">
+      <!-- header html code -->
+        <div class="header google-sans-flex">
           <div class="logo">
             <!-- <img src="Images/payora_transp.png" id="payoraa_logo"> -->
             <a
               href="index.html"
-              class="notable-regular"
+              class="frijole-regular"
               style="
                 text: size 30px;
                 text-decoration: none;
@@ -27,33 +32,60 @@
           </div>
           <div class="right">
             <!-- Navbar Elements -->
-            <div class="headerele paymentspage">
-              <a style="text-decoration: none; color: white" href="pay.html">
+            <div class="headerele paymentspage ">
+              <a style="text-decoration: none; class="navlinktext currentpage" href="pay.html">
                 Payment
               </a>
             </div>
             <div class="headerele recharge">
-              <a style="text-decoration: none; color: white"
+              <a style="text-decoration: none; class="navlinktext" color: white"
                 href="recharge.html">
                 Recharge
               </a>
             </div>
             <div class="headerele travel">
-              <a style="text-decoration: none; color: white" href="travel.html"
+              <a style="text-decoration: none; class="navlinktext"  color: white" href="travel.html"
                 >Travel</a
               >
             </div>
-            <div class="headerele credit">
-              <a style="text-decoration: none; color: white" href="credit.html"
+            <div class="headerele currentpage credit">
+              <a style="text-decoration: none; class="navlinktext"  color: white" href="credit.html"
                 >Credit Card</a
               >
             </div>
           </div>
           <div class="headerele login">
-            <a style="text-decoration: none; color: white" href="login.html"
+            <a style="text-decoration: none; class="navlinktext"  color: white" href="login.html"
               >Login</a
             >
           </div>
+        </div>
+
+
+
+
+
+
+         <!-- header html code ends-->
+          <!-- main body code here  -->
+          <div class="paydiv">
+            <div class="paybody leftsidepay ">
+              <h1 class="leftsidehtext frijole-regular">PREMIUM</h1>
+              <h1 class="leftsidehtext frijole-regular">CREDIT</h1>
+              <h1 class="leftsidehtext frijole-regular">CARDS</h1>
+              <p class="leftsideptext urbanist"> Instant Approval. Exclusive Rewards.
+</p>
+<p class="leftsideptext urbanist">Your Financial Freedom starts here.</p>
+<button type="button" class="exp-button" style="font-size: 25px;border: 1px solid #6f636d;  border-radius: 15px; text-align: center; height: 70px;width: 200px; background-color: #ebe7df; color: #392f41 padding: 10px;;">Explore Cards</button>
+            </div>
+          <div class="paybody rightsidepay google-sans-flex">
+           <img src="Images/cc_5.png" alt="">
+          </div>
+          </div>
+          <div class="footer">
+          <p class="footertext">© 2025 Capstone Project. Built with passion and purpose.</p>
+           <p class="footertext">Made for the next generation of payments — © Payora.</p>
+            <p class="footertext">Built with ❤️ in India.</p>
         </div>
       </div>
 </body>
