--- a/login.html
+++ b/login.html
@@ -3,19 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Payments</title>
-    <link rel="stylesheet" href="travel.css">
+    <title>Recharge</title>
+     <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400..800&family=Eater&family=Freckle+Face&family=Frijole&family=Google+Sans+Flex:opsz,wght@6..144,1..1000&family=Hanalei&family=Outfit:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Rubik+Maze&family=Rubik+Puddles&family=Space+Grotesk:wght@300..700&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="login.css">
     <link rel="stylesheet" href="fonts.css">
     <link rel="stylesheet" href="headerbar.css">
+    <link rel="stylesheet" href="footer.css">
 </head>
 <body>
-    <div class="body">
-        <div class="header stack-sans-text google-sans-code">
+  <div class="body">
+    <div class="header google-sans-flex">
           <div class="logo">
             <!-- <img src="Images/payora_transp.png" id="payoraa_logo"> -->
             <a
               href="index.html"
-              class="notable-regular"
+              class="frijole-regular"
               style="
                 text: size 30px;
                 text-decoration: none;
@@ -27,34 +31,73 @@
           </div>
           <div class="right">
             <!-- Navbar Elements -->
-            <div class="headerele paymentspage">
-              <a style="text-decoration: none; color: white" href="pay.html">
+            <div class="headerele paymentspage ">
+              <a style="text-decoration: none; class="navlinktext " href="pay.html">
                 Payment
               </a>
             </div>
-            <div class="headerele recharge">
-              <a style="text-decoration: none; color: white"
+            <div class="headerele recharge ">
+              <a style="text-decoration: none; class="navlinktext currentpage"
                 href="recharge.html">
                 Recharge
               </a>
             </div>
             <div class="headerele travel">
-              <a style="text-decoration: none; color: white" href="travel.html"
+              <a style="text-decoration: none; class="navlinktext"  href="travel.html"
                 >Travel</a
               >
             </div>
             <div class="headerele credit">
-              <a style="text-decoration: none; color: white" href="credit.html"
+              <a style="text-decoration: none; class="navlinktext"  href="credit.html"
                 >Credit Card</a
               >
             </div>
           </div>
-          <div class="headerele login">
-            <a style="text-decoration: none; color: white" href="login.html"
+          <div class="headerele currentpage login">
+            <a style="text-decoration: none; class="navlinktext"  color: white" href="login.html"
               >Login</a
             >
           </div>
         </div>
-      </div>
+        <div class="mainsec">
+          <div class="paydiv">
+            <!-- <div class="paybody leftsidepay ">
+              <h1 class="leftsidehtext poppins-bold">Recharge</h1>
+              <h1 class="leftsidehtext poppins-bold">Get Your Mobile Recharged in Seconds</h1>
+              <p class="leftsideptext urbanist">Choose your operator, Enter your number, and Pick a plan. That’s it.
+                <ul>
+                  <li class="leftsideptext urbanist">Prepaid & Postpaid supported</li>
+                  <li class="leftsideptext urbanist">All major operators available</li>
+                  <li class="leftsideptext urbanist">Instant confirmation</li>
+                </ul>
+            </div> -->
+          <div class="paybody rightsidepay google-sans-flex">
+            <h6 >⚡ LOGIN INTO YOUR ACCOUNT</h6>
+            <form action="post" class="payment-form">
+              <label class="form-content" style="font-size: 25px;" style="" for="email"> Enter Email</label>
+              <input class="form-content" style="height: 70px;border: 1px solid #ccc3d0; border-radius: 15px; text-align: center; font-size: 25px;" type="text" id="no" name="no" placeholder=" username@email.in">
+
+               <label class="form-content" style="font-size: 25px;" for="pass"> Password</label>
+              <input class="form-content" style="height: 70px;border: 1px solid #ccc3d0; border-radius: 15px; text-align: center; font-size: 25px;" type="password" id="pass" name="pass" placeholder="  Enter Password">
+
+              <!-- <label class="form-content" style="font-size: 25px;" for="amt">Recharge Plan</label>
+              <input class="form-content" style="height: 70px; border: 1px solid #ccc3d0; border-radius: 15px; text-align: center; font-size: 25px;" type="number" id="amt" name="amt" placeholder="  Select Recharge Plan Amount">
+               -->
+              <button class="form-content main-button" style="font-size: 25px;border: 1px solid #6f636d;  border-radius: 15px; text-align: center; height: 70px; background-color: #392f41; color: #ebe7df;" type="submit">Login</button>
+              <div class="extracred">
+                <button class="form-content add-button" style="font-size: 20px;border: 1px solid #6f636d;  border-radius: 15px; text-align: center; height: 70px;width: 40%; background-color: #6f636d; color: #ebe7df;" type="submit">Forgot Pass?</button>
+                <button class="form-content add-button" style="font-size: 20px;border: 1px solid #6f636d;  border-radius: 15px; text-align: center; height: 70px;width: 55%; background-color: #6f636d; color: #ebe7df;" type="submit">Create New Account</button>
+              </div>
+            </form>
+            <h5> Secured by Payora, Powered by Humans</h5>
+          </div>
+          </div>
+        </div>
+        <div class="footer">
+          <p class="footertext">© 2025 Capstone Project. Built with passion and purpose.</p>
+           <p class="footertext">Made for the next generation of payments — © Payora.</p>
+            <p class="footertext">Built with ❤️ in India.</p>
+        </div>
+        </div>
 </body>
 </html>
