--- a/recharge.html
+++ b/recharge.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="recharge.css">
     <link rel="stylesheet" href="fonts.css">
     <link rel="stylesheet" href="headerbar.css">
+    <link rel="stylesheet" href="footer.css">
 </head>
 <body>
   <div class="body">
@@ -64,17 +65,17 @@
               <h1 class="leftsidehtext poppins-bold">Recharge</h1>
               <h1 class="leftsidehtext poppins-bold">Get Your Mobile Recharged in Seconds</h1>
               <p class="leftsideptext urbanist">Choose your operator, Enter your number, and Pick a plan. That’s it.
-                <ul>
-                  <li class="leftsideptext urbanist">Prepaid & Postpaid supported</li>
-                  <li class="leftsideptext urbanist">All major operators available</li>
-                  <li class="leftsideptext urbanist">Instant confirmation</li>
+                <ul style="list-style-type: none;">
+                  <li class="leftsideptext urbanist">⚡ Prepaid & Postpaid supported</li>
+                  <li class="leftsideptext urbanist">⚡ All major operators available</li>
+                  <li class="leftsideptext urbanist">⚡ Instant confirmation</li>
                 </ul>
             </div>
           <div class="paybody rightsidepay google-sans-flex">
             <h6 >⚡ Instant Recharge</h6>
             <form action="post" class="payment-form">
               <label class="form-content" style="font-size: 25px;" style="" for="no"> Enter Mobile Number</label>
-              <input class="form-content" style="height: 70px;border: 1px solid #ccc3d0; border-radius: 15px; text-align: center; font-size: 25px;" type="text" id="no" name="no" placeholder=" +91 69000 00069">
+              <input class="form-content" style="height: 70px;border: 1px solid #ccc3d0; border-radius: 15px; text-align: center; font-size: 25px;" type="text" id="no" name="no" placeholder=" +91 60000 00009">
 
                <label class="form-content" style="font-size: 25px;" for="opeerator"> Operator</label>
               <input class="form-content" style="height: 70px;border: 1px solid #ccc3d0; border-radius: 15px; text-align: center; font-size: 25px;" type="text" id="operator" name="operator" placeholder="  Jio- Delhi">
@@ -82,11 +83,16 @@
               <label class="form-content" style="font-size: 25px;" for="amt">Recharge Plan</label>
               <input class="form-content" style="height: 70px; border: 1px solid #ccc3d0; border-radius: 15px; text-align: center; font-size: 25px;" type="number" id="amt" name="amt" placeholder="  Select Recharge Plan Amount">
               
-              <button class="form-content" style="font-size: 25px;border: 1px solid #6f636d;  border-radius: 15px; text-align: center; height: 70px; background-color: #392f41; color: #ebe7df;" type="submit">Pay to Recharge in Seconds</button>
+              <button class="form-content main-button" style="font-size: 25px;border: 1px solid #6f636d;  border-radius: 15px; text-align: center; height: 70px; background-color: #392f41; color: #ebe7df;" type="submit">Pay to Recharge in Seconds</button>
             </form>
-            <h5> Secured by Payora, Powered by NPCI</h5>
+            <h5> Secured by Payora, Powered by BBPS</h5>
           </div>
           </div>
+        </div>
+        <div class="footer">
+          <p class="footertext">© 2025 Capstone Project. Built with passion and purpose.</p>
+           <p class="footertext">Made for the next generation of payments — © Payora.</p>
+            <p class="footertext">Built with ❤️ in India.</p>
         </div>
         </div>
 </body>
