--- a/pay.html
+++ b/pay.html
@@ -76,7 +76,7 @@
 </p>
             </div>
           <div class="paybody rightsidepay google-sans-flex">
-            <h6 >🔒 Secured Payments</h6>
+            <h6 >🔒 SECURED PAYMENTS</h6>
             <form action="post" class="payment-form ">
               <label class="form-content" style="font-size: 25px;" style="" for="upiid"> Enter UPI ID</label>
               <input class="form-content" style="height: 70px;border: 1px solid #ccc3d0; border-radius: 15px; text-align: center; font-size: 25px;" type="text" id="upiid" name="upiid" placeholder="  username@upi">
@@ -89,7 +89,7 @@
             <h5> Secured by Payora, Powered by NPCI</h5>
           </div>
           </div>
-          <div class="footer">
+          <div class="footer google-sans-flex">
           <p class="footertext">© 2025 Capstone Project. Built with passion and purpose.</p>
            <p class="footertext">Made for the next generation of payments — © Payora.</p>
             <p class="footertext">Built with ❤️ in India.</p>
