--- a/credit.html
+++ b/credit.html
@@ -82,7 +82,7 @@
            <img src="Images/cc_5.png" alt="">
           </div>
           </div>
-          <div class="footer">
+          <div class=" google-sans-flex">
           <p class="footertext">© 2025 Capstone Project. Built with passion and purpose.</p>
            <p class="footertext">Made for the next generation of payments — © Payora.</p>
             <p class="footertext">Built with ❤️ in India.</p>
