--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     />
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400..800&family=Eater&family=Freckle+Face&family=Frijole&family=Google+Sans+Flex:opsz,wght@6..144,1..1000&family=Hanalei&family=Outfit:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Rubik+Glitch&family=Rubik+Maze&family=Rubik+Puddles&family=Space+Grotesk:wght@300..700&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400..800&family=Eater&family=Freckle+Face&family=Frijole&family=Google+Sans+Flex:opsz,wght@6..144,1..1000&family=Hanalei&family=Outfit:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Rubik+Maze&family=Rubik+Puddles&family=Space+Grotesk:wght@300..700&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="index.css" />
     <link rel="stylesheet" href="fonts.css" />
@@ -71,7 +74,7 @@
       <div class="conainer">
         <div class="hero">
           <div class="herotabs ha1">
-            <p class="rubik-maze-regular" id="text1">Instant Payments</p>
+            <p class="rubik-glitch-regular" id="text1">Instant Payments</p>
             <p class="frijole-regular" id="text2">Infinite Convenience</p>
           </div>
           <!-- <div class="herotabs ha2"></div>
@@ -94,7 +97,7 @@
             <p class="textrc1 frijole-regular">Recharge</p>
             <br />
             <p class="textrc1 google-sans-flex" style="font-size: 30px">
-              Enjoy the World's Fastest    Internet in India
+              Running low? Recharge in seconds!
             </p>
             <img
               width="500px"
@@ -116,7 +119,7 @@
           </div>
         </div>
 
-        <div class="footer">
+        <div class="footer google-sans-flex">
           <p class="footertext">© 2025 Capstone Project. Built with passion and purpose.</p>
            <p class="footertext">Made for the next generation of payments — © Payora.</p>
             <p class="footertext">Built with ❤️ in India.</p>
