--- a/login.html
+++ b/login.html
@@ -93,7 +93,7 @@
           </div>
           </div>
         </div>
-        <div class="footer">
+        <div class="footer google-sans-flex">
           <p class="footertext">© 2025 Capstone Project. Built with passion and purpose.</p>
            <p class="footertext">Made for the next generation of payments — © Payora.</p>
             <p class="footertext">Built with ❤️ in India.</p>
