--- a/travel.html
+++ b/travel.html
@@ -72,7 +72,7 @@
                 </ul>
             </div>
           <div class="paybody rightsidepay google-sans-flex">
-            <h6 >BOOK TICKET</h6>
+            <h6 >BOOK TRAIN TICKET</h6>
             <form action="post" class="payment-form">
               <div class="tofrom">
               <label class="form-content" style="font-size: 25px;" style="" for="no"></label>
@@ -102,7 +102,7 @@
                 <option value="SR. CITIZEN">SR. CITIZEN</option>
                 <option value="PHYSICALLY DISABLED">PHYSICALLY DISABLED</option>
               </select>
-              <button class="form-content main-button" style="font-size: 25px;border: 1px solid #6f636d;  border-radius: 15px; text-align: center; height: 70px; background-color: #392f41; color: #ebe7df;" type="submit">Search and Book Train</button>
+              <button class="form-content main-button" style="font-size: 25px;border: 1px solid #6f636d;  border-radius: 15px; text-align: center; height: 70px; background-color: #392f41; color: #ebe7df;" type="submit">Search and Book Tickets</button>
             </form>
             <h5> Secured by Payora, Powered by IRCTC</h5>
           </div>
