--- a/credit.html
+++ b/credit.html
@@ -33,18 +33,18 @@
           <div class="right">
             <!-- Navbar Elements -->
             <div class="headerele paymentspage ">
-              <a style="text-decoration: none; class="navlinktext currentpage" href="pay.html">
+              <a style="text-decoration: none;" class="navlinktext " href="pay.html">
                 Payment
               </a>
             </div>
             <div class="headerele recharge">
-              <a style="text-decoration: none; class="navlinktext" color: white"
+              <a style="text-decoration: none; " class="navlinktext" color: white"
                 href="recharge.html">
                 Recharge
               </a>
             </div>
             <div class="headerele travel">
-              <a style="text-decoration: none; class="navlinktext"  color: white" href="travel.html"
+              <a style="text-decoration: none;" class="navlinktext"  color: white" href="travel.html"
                 >Travel</a
               >
             </div>
@@ -55,7 +55,7 @@
             </div>
           </div>
           <div class="headerele login">
-            <a style="text-decoration: none; class="navlinktext"  color: white" href="login.html"
+            <a style="text-decoration: none;" class="navlinktext"  color: white" href="login.html"
               >Login</a
             >
           </div>
