--- a/recharge.html
+++ b/recharge.html
@@ -72,7 +72,7 @@
                 </ul>
             </div>
           <div class="paybody rightsidepay google-sans-flex">
-            <h6 >⚡ Instant Recharge</h6>
+            <h6 >⚡ INSTANT RECHARGE</h6>
             <form action="post" class="payment-form">
               <label class="form-content" style="font-size: 25px;" style="" for="no"> Enter Mobile Number</label>
               <input class="form-content" style="height: 70px;border: 1px solid #ccc3d0; border-radius: 15px; text-align: center; font-size: 25px;" type="text" id="no" name="no" placeholder=" +91 60000 00009">
